<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/login_screen_title"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:text="@string/username_TextView"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            >

        </TextView>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/username_editText"
            >


        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/password_TextView"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            >

        </TextView>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text=""
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_editText"
            >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="forgot your password?"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/singInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="77dp"
            android:layout_marginEnd="77dp"
            android:text="@string/signIn_button"
            android:textAllCaps="false"
            android:textSize="25sp"
            >

        </Button>

        <TextView
            android:id="@+id/newUserSingUpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="New here? Sign Up instead"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />


    </LinearLayout>

</ScrollView>